--- a/.env
+++ b/.env
@@ -7,13 +7,7 @@ FASSET_BOT_SECRETS="./secrets.json"
 FASSET_USER_SECRETS="./secrets.json"
 
 ## Enable the following line on Windows to allow reading secrets, since secrets file permission check does not work
-# ALLOW_SECRETS_ON_WINDOWS=true
-
-## (Optional) Path to config file for users, instead you can use `-c` parameter
-# FASSET_USER_CONFIG="./packages/fasset-bots-core/run-config/coston-user.json"
-
-## (Optional) Path to secrets json file for users, instead you can use `-s` parameter.
-# FASSET_USER_SECRETS=""
+ALLOW_SECRETS_ON_WINDOWS=true
 
 ## (Optional) Path to directory, used for storing unexecuted minting. Defaults to `fasset` subdirectory in user's home directory.
 # FASSET_USER_DATA_DIR=""
