--- a/tmp.agent-settings.json
+++ b/tmp.agent-settings.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "file:///home/kuco23/src/fasset-bots-david-beta/packages/fasset-bots-core/run-config/schema/agent-settings.schema.json",
+    "$schema": "../fasset-bots/packages/fasset-bots-core/run-config/schema/agent-settings.schema.json",
     "poolTokenSuffix": "",
     "vaultCollateralFtsoSymbol": "testETH",
     "fee": "0.25%",
