disable underlying topups for FSimCoinX

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "agentBotSettings": {
         "liquidationPreventionFactor": "0"
     },
-    "FTestXRP": {
+    "FSimCoinX": {
         "recommendedOwnerBalance": "25",
         "minimumFreeUnderlyingBalance": "0"
     }
