--- a/config.json
+++ b/config.json
@@ -5,10 +5,12 @@
         "https://attestation-coston.aflabs.net/attestation-client"
     ],
     "agentBotSettings": {
-        "liquidationPreventionFactor": "0"
-    },
-    "FSimCoinX": {
-        "recommendedOwnerBalance": "25",
-        "minimumFreeUnderlyingBalance": "0"
+        "liquidationPreventionFactor": "0",
+        "fAssets": {
+            "FSimCoinX": {
+                "recommendedOwnerBalance": "25",
+                "minimumFreeUnderlyingBalance": "0"
+            }
+        }
     }
 }
