--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "extends": "coston-bot.json",
+    "extends": "coston-bot-mysql.json",
     "contractsJsonFile": "./coston.json",
     "attestationProviderUrls": [
         "https://attestation-coston.aflabs.net/attestation-client"
